# SecretGarden

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: format.html  index.css  index.html  index.js  test.html  videos.html  videoview.html
app/src/main/assets/js/: choose-video-type.js  context-menu.js  fetch-videos.js  format-duration.js  loading-more.js  search.js  sort.js  timeago.js
app/src/main/java/psycho/euphoria/v/: 1.js  BottomSheetItem.java  BottomSheetItemAdapter.java  BottomSheetLayout.java  CustomWebViewClient.java  Extractor.java  FileAdapter.java  FileListActivity.java  GestureDetector2.java  Helpers.java  JavaScriptInterface.java  MainActivity.java  Native.java  NineOneHelper.java  PlayerActivity.java  PlayerHelper.java  PlayerSizeInformation.java  PlayerUtils.java  ScalableTextureView.java  SettingsActivity.java  SettingsFragment.java  Shared.java  SimpleTimeBar.java  SimpleVideoView.java  SquareFrameLayout.java  Utils.java  (+14 more)
app/src/main/jni/: CMakeLists.txt  http.c  http.h  native-lib.c  native-lib.h
app/src/main/jni/mbedtls/: CMakeLists.txt
app/src/main/res/layout/: bottom_sheet_grid_item.xml  file_item.xml  file_list_activity.xml  list_item.xml  main_activity.xml  modal_bottom_sheet_content.xml  player.xml  player_activity.xml  video.xml  video_item.xml  web_activity.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
